--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,24 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+        <groupId>org.nd4j</groupId>
+        <artifactId>nd4j-api</artifactId>
+        <version>0.5.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.nd4j</groupId>
+        <artifactId>nd4j-native-platform</artifactId>
+        <version>0.5.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.deeplearning4j</groupId>
+        <artifactId>deeplearning4j-core</artifactId>
+        <version>0.5.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.datavec</groupId>
+        <artifactId>datavec-api</artifactId>
+        <version>0.5.0</version>
     </dependency>
   </dependencies>
   <build>
