slight change to mcts algo to make it less verbose for now + make OptimizeParameter the default target to execute via maven

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <exec.mainClass>uucki.App</exec.mainClass>
+    <exec.mainClass>uucki.OptimizeParameter</exec.mainClass>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
