--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,11 @@
 *.war
 *.ear
 
+*.swp
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 data/
 report/build/
+target/
